# cose-c-api

./: Cargo.toml
include/: cosec.h
src/: lib.rs
